--- a/force-app/main/default/classes/PropertyRestResourceTest.cls
+++ b/force-app/main/default/classes/PropertyRestResourceTest.cls
@@ -121,6 +121,8 @@ public class PropertyRestResourceTest {
            Test.startTest();
            PropertyRestResource.updatePropertyOwner();
            Test.stopTest();
+
+           System.assertEquals(200, res.statusCode);
     }
 
 }
