1st variant HW FE 6

--- a/force-app/main/default/classes/Utils.cls
+++ b/force-app/main/default/classes/Utils.cls
@@ -31,5 +31,10 @@ public  class Utils {
         return Schema.getGlobalDescribe().get(objectName).getDescribe().getRecordTypeInfosById().get(strRecordTypeId).getName();
     }
 
+    public static List<SObject> getRecordsByFielsFromObject(String objectName, String fields)
+    {
+        return Database.query('SELECT ' + fields + ' FROM ' +objectName);
+    }
+
     
 }
